# hackathon-facedetection

./: .gitignore  API_SPEC.md  BACKEND_INTEGRATION.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_FILES_INDEX.md  QUICKSTART.md  README.md  README_COMPLETE.md  api_server.py  attendance.db  attendance_log.json  aws_sync.py  benchmark.py  face_database.json  face_recognition_engine.py  liveness_detection.py  main_pipeline.py  requirements.txt  requirments.txt  storage.py  test.py
cpp/: CMakeLists.txt  FaceAttendanceModule.cpp  attendance.db  face_recognition.cpp  face_recognition.hpp  liveness_detector.cpp  liveness_detector.hpp  main_pipeline.cpp
frontend/: .easignore  README.md  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/AttendanceApp/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
frontend/AttendanceApp/src/components/: AttendanceList.tsx  FailureScreen.tsx  LivenessPrompt.tsx  SearchBar.tsx  SuccessScreen.tsx
frontend/AttendanceApp/src/screens/: AttendanceScreen.tsx  SettingsScreen.tsx
frontend/AttendanceApp/src/services/: DatabaseService.ts  FaceRecognitionService.ts  NetworkService.ts  SyncService.ts
frontend/AttendanceApp/src/types/: index.ts
frontend/FaceAttendanceModule/: FaceAttendanceModule.podspec  FaceAttendancePlugin.mm  index.js
frontend/FaceAttendanceModule/cpp/: face_recognition.cpp  face_recognition.hpp  liveness_detector.cpp  storage.cpp
frontend/cpp/: FaceAttendanceModule.cpp  face_landmark.onnx  face_recognition.cpp  face_recognition.hpp  liveness_detector.cpp  liveness_detector.hpp  liveness_engine  liveness_engine.cpp
frontend/hackathon/: app.json  babel.config.js  metro.config.js  package-lock.json  package.json
frontend/hackathon/FaceAttendanceModule/: .gitignore  FaceAttendanceModule.podspec  FaceAttendancePlugin.mm  index.js  package.json
frontend/hackathon/FaceAttendanceModule/cpp/: face_database.json  face_recognition.cpp  face_recognition.hpp  liveness_detector.cpp  liveness_detector.hpp
frontend/hackathon/cpp/: FaceAttendanceModule.cpp  face_recognition.cpp  face_recognition.hpp  liveness_detector.cpp  storage.hpp
frontend/hackathon/src/app/(tabs)/: explore.tsx  index.tsx
frontend/hackathon/src/services/: DatabaseService.ts  FaceRecognitionService.ts  SyncService.ts
frontend/src/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
frontend/src/services/: DatabaseService.ts  FaceRecognitionService.ts  NetworkService.ts
preprocessing/: preprocessing.py
training/: train.py
